Implement IAuthor Repo and other use case added dtos to manipulate data abstract the unit of work with the context using interface for it implement loginhandler and others Events handler for email created constant class for cleaner code

--- a/backend/Application/Application.csproj
+++ b/backend/Application/Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\SharedKernel\SharedKernel.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Auth\Commands\Update\" />
+  </ItemGroup>
 </Project>
