added docker-compose with some changes

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/Westeros/DesignTimeBuild/.dtbcache.v2
 /.vs/slnx.sqlite
 /.vs/Westeros/FileContentIndex
+/backend/Api/LOG/Westeros-Api-20230121.json
